--- a/Affichage.html
+++ b/Affichage.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Grist Widget - Liste Sélectionnable</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        select {
+            width: 200px;
+            padding: 10px;
+            margin: 20px 0;
+        }
+    </style>
+</head>
+<body>
 
-   <head>
-    <meta charset="utf-8">
-    <title> Widget Tableau </title>
+    <h3>Sélectionnez une valeur unique :</h3>
+    <select id="uniqueValuesSelect">
+        <!-- Les options seront ajoutées dynamiquement ici -->
+    </select>
+
     <script>
+        // URL de l'API pour récupérer les données
+        const apiUrl = 'https://api.yourservice.com/data'; // Remplace par l'URL de ton API
 
+        // Fonction pour charger les valeurs uniques de la première colonne
+        function loadUniqueValues() {
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    // Extraire les valeurs de la première colonne et filtrer les duplications
+                    const uniqueValues = [...new Set(data.map(record => record.NomProjet))];
+
+                    // Obtenir l'élément <select> pour y ajouter les options
+                    const selectElement = document.getElementById('uniqueValuesSelect');
+
+                    // Ajouter une option par valeur unique trouvée
+                    uniqueValues.forEach(value => {
+                        const option = document.createElement('option');
+                        option.value = value;
+                        option.textContent = value;
+                        selectElement.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Erreur lors du chargement des valeurs uniques:', error));
+        }
+
+        // Charger les valeurs uniques au démarrage
+        loadUniqueValues();
     </script>
-   </head> 
 
-   <body>
-
-
-
-   </body>
-   
+</body>
 </html>
