--- a/Affichage.html
+++ b/Affichage.html
@@ -24,7 +24,7 @@
 
     <script>
         // URL de l'API pour récupérer les données
-        const apiUrl = 'https://api.yourservice.com/data'; // Remplace par l'URL de ton API
+        const apiUrl = 'https://vincitest.getgrist.com/api'; // Remplace par l'URL de ton API
 
         // Fonction pour charger les valeurs uniques de la première colonne
         function loadUniqueValues() {
