--- a/Affichage.html
+++ b/Affichage.html
@@ -24,8 +24,8 @@
 
     <script>
         // URL de l'API pour récupérer les données
-        const apiUrl = 'https://vincitest.getgrist.com/api/docs/h7kNsaQWiWzdVBU8WfZWpF/tables/Fusion/records'; // URL correcte de l'API
-        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d'; // Ton token
+        const apiUrl = 'https://vincitest.getgrist.com/api/docs/h7kNsaQWiWzdVBU8WfZWpF/tables/Fusion/records';
+        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d';
 
         // Fonction pour charger les valeurs uniques de la première colonne
         function loadUniqueValues() {
