--- a/Affichage.html
+++ b/Affichage.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <h3>Sélectionnez une valeur unique :</h3>
+    <h3>Sélectionnez une valeur unique !</h3>
     <select id="uniqueValuesSelect">
         <!-- Les options seront ajoutées dynamiquement ici -->
     </select>
