--- a/Affichage.html
+++ b/Affichage.html
@@ -17,17 +17,17 @@
 </head>
 <body>
 
-    <h3>Sélectionnez une valeur unique !</h3>
+    <h3>Sélectionnez une valeur unique :</h3>
     <select id="uniqueValuesSelect">
         <!-- Les options seront ajoutées dynamiquement ici -->
     </select>
 
     <script>
-        // URL de l'API pour récupérer les données depuis Grist
+        // URL de l'API pour récupérer les données depuis Grist (table "Fusion")
         const apiUrl = 'https://vincitest.getgrist.com/api/docs/h7kNsaQWiWzdVBU8WfZWpF/tables/Fusion/records';
-        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d';  // Assure-toi d'avoir le bon token d'accès
+        const bearerToken = '52a7601b8532a91257c92a42eda896b47aa6c73d';  // Ton token d'accès Grist
 
-        // Fonction pour charger les valeurs uniques de la première colonne
+        // Fonction pour charger les valeurs uniques de la première colonne (NomProjet)
         function loadUniqueValues() {
             fetch(apiUrl, {
                 method: 'GET',
@@ -37,23 +37,22 @@
                 }
             })
             .then(response => {
-                // Vérifie si la réponse est OK
                 if (!response.ok) {
                     throw new Error(`Erreur HTTP: ${response.status}`);
                 }
-                return response.json();
+                return response.json();  // Convertir la réponse en JSON
             })
             .then(data => {
-                // Affiche les données dans la console pour débugger
-                console.log("Données reçues de l'API:", data);
+                // Affiche les données reçues pour déboguer
+                console.log("Données reçues de l'API Grist:", data);
 
-                // Extraire les valeurs de la première colonne et éliminer les duplications
+                // Extraire les valeurs uniques de la première colonne (NomProjet)
                 const uniqueValues = [...new Set(data.records.map(record => record.fields.NomProjet))];
 
-                // Obtenir l'élément <select> pour y ajouter les options
+                // Obtenir l'élément <select> pour ajouter les options
                 const selectElement = document.getElementById('uniqueValuesSelect');
 
-                // Vider l'élément <select> pour éviter d'ajouter en double lors du rechargement
+                // Vider l'élément <select> avant d'ajouter de nouvelles options
                 selectElement.innerHTML = '';
 
                 // Ajouter une option vide par défaut
@@ -62,16 +61,18 @@
                 defaultOption.textContent = '-- Sélectionner un projet --';
                 selectElement.appendChild(defaultOption);
 
-                // Ajouter une option par valeur unique trouvée
+                // Ajouter une option pour chaque valeur unique trouvée dans "NomProjet"
                 uniqueValues.forEach(value => {
-                    const option = document.createElement('option');
-                    option.value = value;
-                    option.textContent = value;
-                    selectElement.appendChild(option);
+                    if (value) {  // Vérifier si la valeur est définie
+                        const option = document.createElement('option');
+                        option.value = value;
+                        option.textContent = value;
+                        selectElement.appendChild(option);
+                    }
                 });
             })
             .catch(error => {
-                // Affiche les erreurs dans la console
+                // Afficher les erreurs dans la console
                 console.error('Erreur lors du chargement des valeurs uniques:', error);
             });
         }
